# printemps

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  _config.yml  docker-compose.yml  index.md  trend.txt
.github/workflows/: main.yml
_layouts/: default.html  sub.html
_sass/: jekyll-theme-cayman.scss
application/dat/: option.json
application/mps_solver/: main.cpp
application/opb_solver/: main.cpp
application/pb_solver/: main.cpp
application/qap_solver/: main.cpp
application/standalone/: depreciation.h  main.cpp
asset/: figure.pptx
assets/image/: figure.pptx
cmake/: common.cmake
cmake/application/: CMakeLists.txt
cmake/example/: CMakeLists.txt
cmake/extra/: CMakeLists.txt
cmake/test/: CMakeLists.txt  test_example.cmake  test_helper.cmake  test_model.cmake  test_model_component.cmake  test_model_handler.cmake  test_mps.cmake  test_multi_array.cmake  test_neighborhood.cmake  test_opb.cmake  test_option.cmake  test_option_enumerate.cmake  test_pb.cmake  test_preprocess.cmake  test_presolver.cmake  test_solution.cmake  test_solver.cmake  test_standalone.cmake  test_utility.cmake  test_utility_graph.cmake  test_utility_json.cmake  test_utility_sparse.cmake  test_utility_ucb1.cmake  test_verifier.cmake
contents/: solver_option_guide.md  starter_guide.md
contents/benchmark/: index.md
cppmh/: constant.h  cppmh.h
cppmh/model/: abstract_multi_array.h  abstract_multi_array_element.h  constraint.h  constraint_binary_operator.h  constraint_proxy.h  constraint_reference.h  constraint_type_reference.h  expression.h  expression_binary_operator.h  expression_proxy.h  fixed_size_hash_map.h  model.h  model_summary.h  move.h  named_solution.h  neighborhood.h  objective.h  plain_solution.h  plain_solution_pool.h  range.h  selection.h  solution.h  solution_score.h  value_proxy.h  variable.h  variable_proxy.h  variable_reference.h
cppmh/solver/: history.h  incumbent_holder.h  memory.h  option.h  result.h  solution_archive.h  solver.h  status.h
cppmh/utility/: console_utility.h  csv_reader.h  fixed_size_hash_map.h  fixed_size_queue.h  random_utility.h  string_utility.h  time_keeper.h  unordered_set_utility.h  utility.h  vector_utility.h
docker/: Dockerfile
document/: solver_option_guide.md  starter_guide.md
doxygen/: Doxyfile
example/: bin_packing.cpp  knapsack.cpp  quadratic_assignment.cpp  simple_1.cpp  simple_2.cpp  sudoku.cpp
extra/pb_competition_2025/: main.cpp  pb_competition_2025_solver.h  pb_competition_2025_solver_argparser.h
makefile/: Makefile.application  Makefile.docker  Makefile.example  Makefile.external  Makefile.extra  Makefile.test
miscellaneous/hard_problem/: pb-market-split8-70-4.cpp  traveling_salesman.cpp
miscellaneous/script/: batch.py  benchmark.py  visualize_distance.py  visualize_solution.py
printemps/: constant.h  printemps.h  std.h
printemps/constant/: constant.h
printemps/helper/: auxiliary_file_reader.h  helper.h  solution_file_reader.h
printemps/linear_programming/: linear_programming.h
printemps/model/: abstract_multi_array.h  abstract_multi_array_element.h  constraint.h  constraint_binary_operator.h  constraint_proxy.h  constraint_reference.h  constraint_sense.h  constraint_type_reference.h  expression.h  expression_binary_operator.h  expression_proxy.h  model.h  model_summary.h  move.h  move_sense.h  named_solution.h  neighborhood.h  objective.h  plain_solution.h  presolver.h  range.h  selection.h  selection_mode.h  solution.h  solution_score.h  value_proxy.h  variable.h  variable_proxy.h  variable_reference.h  variable_sense.h  verifier.h
printemps/model_component/: constraint.h  constraint_binary_operator.h  constraint_compact.h  constraint_proxy.h  constraint_reference.h  constraint_sense.h  constraint_type.h  constraint_type_classifier.h  constraint_type_reference.h  expression.h  expression_binary_operator.h  expression_proxy.h  expression_structure.h  model_component.h  objective.h  range.h  selection.h  variable.h  variable_proxy.h  variable_reference.h  variable_sense.h  variable_type.h  variable_type_reference.h
printemps/model_handler/: constraint_reference.h  constraint_type_reference.h  model_builder.h  model_component_creator.h  model_evaluator.h  model_handler.h  model_initial_solution_handler.h  model_json_handler.h  model_linear_programming_handler.h  model_mps_handler.h  model_opb_handler.h  model_printer.h  model_state_inspector.h  model_updater.h  reference.h  variable_reference.h  variable_type_reference.h
printemps/mps/: mps.h  mps_bound_sense.h  mps_bound_type.h  mps_constraint.h  mps_constraint_sense.h  mps_objective.h  mps_objective_sense.h  mps_read_mode.h  mps_variable.h  mps_variable_sense.h  mps_variable_type.h
printemps/multi_array/: abstract_multi_array.h  abstract_multi_array_element.h  multi_array.h  value_proxy.h
printemps/neighborhood/: BinomialConstraint.h  abstract_move_generator.h  aggregation_move_generator.h  balanced_integers_move_generator.h  binary_move_generator.h  binomial_constraint.h  chain_move_generator.h  constant_difference_integers_move_generator.h  constant_ratio_integers_move_generator.h  constant_sum_integers_move_generator.h  exclusive_move_generator.h  exclusive_nor_move_generator.h  exclusive_or_move_generator.h  integer_move_generator.h  inverted_integers_move_generator.h  move.h  move_sense.h  move_type.h  neighborhood.h  precedence_move_generator.h  selection_move_generator.h  soft_selection_move_generator.h  trinomial_constraint.h  trinomial_exclusive_nor_move_generator.h  two_flip_move_generator.h  user_defined_move_generator.h  (+1 more)
python/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
python/printemps/: __init__.py  _cli.py
python/printemps/examples/: __init__.py  bin_packing.py  knapsack.py  simple_1.py  simple_2.py  sudoku.py
python/src/: _printemps.cpp
python/tests/: test_bin_packing.py  test_knapsack.py  test_simple_1.py  test_simple_2.py  test_standalone.py  test_sudoku.py
python/tools/: vendor.py
script/: batch.py  requirements.txt  visualize_distance.py  visualize_solutions.py  visualize_trend.py
(+660 files in other folders)
